# Mnemo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  coverage-backend.json  coverage-frontend.json  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.executor.yml  docker-compose.fe-test.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  history.csv  mutation-ai_gateway.json  mutation-db.json  mutation-scheduler.json  mutation-worker.json  pyproject.toml  trend.md
.github/workflows/: ci.yml  e2e.yml  fuzz.yml  mutation.yml  step-images.yml
api/: __init__.py  deps.py  main.py  minio_capacity_store.py  schemas.py
api/mcp_server/: __init__.py  __main__.py  http_app.py  server.py
api/routes/: admin.py  auth.py  bili.py  collections.py  domains.py  glossary.py  jobs.py  notes.py  profiles.py  prompts.py  runner.py  search.py  subscriptions.py  workers.py  ws.py
api/services/: __init__.py  kb.py
configs/: pipelines.yaml  pools.yaml  resources.yaml  sources.yaml  venues.yaml
configs/domain/: general.yaml
configs/prompts/: 08_smart.md  18_smart_article.md  21_smart_podcast.md
deploy/: README.md
deploy/edge/: .env.example  Caddyfile  docker-compose.yml  worker.yml
deploy/tunnel/: docker-compose.tunnel.yml
design/: DESIGN-SPEC.md  _frag2.html  prototype.html
design/_frag/: a.html  b.html  c.html
design/handoff/: BACKEND-TODO.md  HANDOFF.md  REBUILD-NOTES.md
docker/: base.Dockerfile  step-base.Dockerfile  step-gpu.Dockerfile  step-heavy.Dockerfile  step-media.Dockerfile  step-ocr.Dockerfile  step-pdf.Dockerfile
docs/: 00-vision.md  01-architecture.md  02-domain-model.md  03-contracts.md  05-content-adapters.md  06-prompt-engineering.md  07-security.md  08-deployment.md  09-testing.md  10-observability.md  11-dev-workflow.md  12-cicd.md  13-dependencies.md
docs/04-module-design/: ai-gateway.md  api.md  frontend.md  knowledge-store.md  scheduler.md  step-base.md  steps-article.md  steps-paper.md  steps-video.md  worker.md
docs/adr/: 0006-gateway-cloudflare-tunnel.md  0007-remote-worker-polling.md  0008-search-sqlite-fts5.md  0011-worker-runtime-orchestration.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
scheduler/: main.py  scheduler.py
scripts/: backfill-published-at.sh  backup.sh  build-uptest.sh  gc-jobs.sh  gen_prompt_templates.py  mutation_score.py  purge-jobs.sh  push-to-edge.sh  reencrypt-credentials.sh  restore.sh  rollback.sh  test.sh
shared/: __init__.py  ai_gateway.py  audit.py  bili_space.py  config.py  db.py  errors.py  ids.py  logging_setup.py  models.py  notes_versions.py  notify.py  redis_client.py  rss_fetch.py  runner_ops.py  source_detect.py  sources.py  status.py  step_base.py  storage.py  sysload.py  version.py
shared/subscriptions/: __init__.py  base.py  bilibili.py  local_dir.py  rss.py  youtube.py
steps/: __init__.py
steps/article/: step_02_parse_article.py  step_03_article_sections.py  step_04_smart_article.py  step_04_translate_article.py  step_05_concepts.py  step_05_review.py  step_16_parse_article.py  step_17_article_sections.py  step_18_smart_article.py  step_19_review.py
steps/audio/: step_03_transcript_parse.py  step_04_smart_podcast.py  step_05_review.py  step_20_transcript_parse.py  step_21_smart_podcast.py  (+1 more)
tests/: conftest.py  test_ai_gateway.py  test_ai_logs.py  test_api_admin.py  test_api_auth.py  test_api_bili.py  test_api_collection_sync.py  test_api_collections.py  test_api_domains.py  test_api_glossary.py  test_api_jobs.py  test_api_notes.py  test_api_profiles.py  test_api_runner.py  test_api_search.py  test_api_subscriptions.py  test_api_workers.py  test_ass_parser.py  test_audit.py  test_concept_graph.py  test_config.py  test_db.py  test_errors.py  test_frontend_bili_login.py  test_mcp.py  test_mcp_http.py  test_models.py  test_module_boundaries.py  test_pipeline_config.py  test_prompt_overrides.py  test_prompt_templates.py  test_redis_client.py  test_runner_ops.py  test_scheduler.py  test_scheduler_glossary.py  test_source_detect.py  test_srt_parser.py  test_status_components.py  test_step_article.py  test_step_audio.py  (+13 more)
tunnel_stats/: main.py
worker/: gateway_transport.py  main.py  step_runner.py  transport.py  worker.py
(+236 files in other folders)
