[project]
name = "mnemo"
version = "0.1.0"
description = "AI-assisted personal learning knowledge base"
requires-python = ">=3.11"
# 上界封顶:挡住新 major/minor 静默引入(USTC 与官方源解析差异曾坑过 CI);
# 当前安装版本均落在区间内。完全锁定可后续上 lockfile(uv/pip-tools)。
dependencies = [
    "redis>=8,<9",
    "pyyaml>=6.0,<7",
    "structlog>=24.0,<27",
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "minio>=7,<8",
    "cryptography>=43,<47",
]

[project.optional-dependencies]
steps = [
    "yutto>=2.0,<3",
    "yt-dlp>=2024.0,<2027.0",
    "scenedetect[opencv]>=0.6,<1",
    "Pillow>=10.0,<13",
    "imagehash>=4.3,<5",
    "scikit-image>=0.22,<1",
    "rapidocr-onnxruntime>=1.3,<2",
    "pymupdf>=1.24,<2",
    "trafilatura>=1.6,<2",
]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "aiofiles>=24.0,<26",
    "python-multipart>=0.0.9,<1",
    "qrcode>=7.4,<9",
    "Pillow>=10.0,<13",
    "bilibili-api-python>=16.0,<18",
]
gpu = [
    "faster-whisper>=1.0,<2",
]
worker = [
    "docker>=7.1,<8",
]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "fakeredis[lua]>=2.28,<4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "steps*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
