[project]
name = "flori"
# 版本递增规则:任何改动 patch(第3段)+1;逢10进位(0.2.9→0.3.0,0.9.9→1.0.0);大重构 major+1。
# 全系统单一版本,所有组件(api/scheduler/worker)统一。运行时 = 此值 + 构建短sha(见 shared/version.py)。
version = "0.7.8"
description = "AI-assisted personal learning knowledge base"
requires-python = ">=3.11"
# 上界封顶:挡住新 major/minor 静默引入(USTC 与官方源解析差异曾坑过 CI);
# 当前安装版本均落在区间内。完全锁定可后续上 lockfile(uv/pip-tools)。
dependencies = [
    "redis>=8,<9",
    "pyyaml>=6.0,<7",
    "structlog>=24.0,<27",
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "minio>=7,<8",
    "cryptography>=43,<47",
]

[project.optional-dependencies]
steps = [
    "yutto>=2.0,<3",
    "yt-dlp>=2024.0,<2027.0",
    "scenedetect[opencv]>=0.6,<1",
    "Pillow>=10.0,<13",
    "imagehash>=4.3,<5",
    "scikit-image>=0.22,<1",
    "rapidocr-onnxruntime>=1.3,<2",
    "pymupdf>=1.24,<2",
    "trafilatura>=1.6,<2",
]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9,<1",
    "qrcode>=7.4,<9",
    "Pillow>=10.0,<13",
    "bilibili-api-python>=16.0,<18",
    "feedparser>=6.0,<7",   # RSS source-adapter(shared/subscriptions/rss.py,后续实现)
]
gpu = [
    "faster-whisper>=1.0,<2",
]
worker = [
    "docker>=7.1,<8",
]
mcp = [
    "mcp>=1.28,<2",   # MCP server:把知识库作为 MCP 提供给 agent(api/mcp_server,stdio v1)
]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "fakeredis[lua]>=2.28,<4",
    "pytest-cov>=5,<7",
    "schemathesis>=4,<5",
    "feedparser>=6.0,<7",   # RSS source-adapter 测试(test_subscription_rss.py)需真 feedparser 解析
]
mutation = [
    # 变异测试(慢,仅手动 / CI workflow_dispatch 跑;量"测试到底有没有意义")
    "mutmut>=3,<4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "steps*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "fuzz: OpenAPI 模糊/契约测试(schemathesis,较慢)。默认套件用 -m 'not fuzz' 跳过;手动 -m fuzz 跑。",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# 变异测试(mutmut 3.x)。目标:量"花钱/正确性关键"模块(计费去重 ai_gateway、DB、调度状态机、worker 乐观锁)
# 的测试到底有没有意义。慢 → 仅经 .github/workflows/mutation.yml 手动触发;本地 pip install '.[test,mutation]'。
# 注:v3 用 source_paths(非 v2 的 paths_to_mutate)。mutmut 把 source_paths 复制到 ./mutants/ 再变异,
#     故 mutants/ 必须是"可运行的完整副本":source_paths 放整个应用 + also_copy 补 tests/configs/pyproject。
# 评分不用 mutmut 自带的 run-判生死(本布局下恒报 killed=0:它跑测试时 import shared 解析到 /app/shared
#     原文,没从 mutants/ 副本激活变异;mutmut 3.6 的 run 无 runner/cwd 配置可纠正)。改用
#     scripts/mutation_score.py:设 MUTANT_UNDER_TEST 从 mutants/ 跑相关测试,产出【真实】killed/survived。
#     本节的 pytest_add_cli_args_test_selection 仅供 mutmut 生成阶段(脚本会临时换成快基线再还原)。
[tool.mutmut]
source_paths = ["shared", "scheduler", "worker", "api", "steps"]
also_copy = ["tests", "configs", "pyproject.toml"]
pytest_add_cli_args_test_selection = ["tests/", "-m", "not fuzz"]
